test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/21/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/21/Solution.java:50: verify: The prover cannot establish an assertion (Postcondition: ./test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/21/Solution.java:12:) in method convert
        return buf.toString();
        ^
./test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/21/Solution.java:12: verify: Associated declaration: ./test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/21/Solution.java:50:
//@ ensures(((numRows == 3) && (s.equals("PAYPALISHIRING"))) ==> (\result.equals("PAHNAPLSIIGYIR")));
    ^
error: An internal JML error occurred, possibly recoverable.  Please report the bug with as much information as you can.
  Reason: Unexpected result when querying SMT solver for reason for an unknown result: (error "Error writing to solver: (get-info :reason-unknown) java.io.IOException: Broken pipe")
1 error
2 verification failures
